--- a/Lab3/.settings/org.eclipse.wst.common.component
+++ b/Lab3/.settings/org.eclipse.wst.common.component
@@ -3,6 +3,6 @@
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
         <property name="java-output-path" value="/Lab3/build/classes"/>
-        <property name="context-root" value="Lab3"/>
+        <property name="context-root" value="Lab3Task1"/>
     </wb-module>
 </project-modules>
